--- a/src/main/resources/views/home.fxml
+++ b/src/main/resources/views/home.fxml
@@ -1,48 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane fx:id="borderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.soft.amh.controllers.HomeController">
    <top>
-      <AnchorPane prefHeight="40.0" prefWidth="899.0" styleClass="nav-bar" stylesheets="@../styles/home.css" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="37.0" prefWidth="900.0" styleClass="nav-bar" stylesheets="@../styles/home.css" BorderPane.alignment="CENTER">
          <children>
+            <FlowPane fx:id="iconFlowPane" alignment="CENTER" layoutX="-2.0" layoutY="1.0" prefHeight="39.0" prefWidth="270.0">
+               <children>
+                  <Label fx:id="showMenuBtn" alignment="CENTER" onMouseClicked="#onclickShowMenuBtn" prefHeight="27.0" prefWidth="28.0" styleClass="menu-hidden-btn" stylesheets="@../styles/home.css" text="💼">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+                  <ImageView fx:id="iconImage" fitHeight="27.0" fitWidth="231.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/logo-removebg-preview.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </FlowPane>
             <Button fx:id="logoutBtn" layoutX="834.8" layoutY="7.0" mnemonicParsing="false" onMouseClicked="#onclickLogoutBtn" prefHeight="27.0" prefWidth="59.0" styleClass="logout-btn" stylesheets="@../styles/home.css" text="logout" AnchorPane.rightAnchor="6.0" />
-            <ImageView fx:id="profileImage" fitHeight="32.0" fitWidth="31.0" layoutX="801.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" AnchorPane.rightAnchor="77.0">
+            <ImageView fx:id="profileImage" fitHeight="32.0" fitWidth="31.0" layoutX="801.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" styleClass="profile-img" AnchorPane.rightAnchor="77.0">
                <image>
                   <Image url="@../img/avatar.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="27.0" fitWidth="231.0" layoutX="-11.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../img/logo-removebg-preview.png" />
-               </image>
-            </ImageView>
-            <Label fx:id="dateTimeLabel" layoutX="657.0" layoutY="12.0" prefHeight="19.0" prefWidth="125.0" text="19 Jan 2024 8:02 PM" AnchorPane.rightAnchor="117.4">
+            <Label fx:id="dateTimeLabel" layoutX="657.0" layoutY="12.0" prefHeight="19.0" prefWidth="158.0" styleClass="time" stylesheets="@../styles/home.css" AnchorPane.rightAnchor="117.0">
                <font>
                   <Font size="13.0" />
                </font>
             </Label>
+            <ProgressBar fx:id="progressBar" blendMode="DARKEN" layoutX="267.0" layoutY="16.0" opacity="0.82" prefHeight="14.0" prefWidth="154.0" progress="0.0" style="-fx-border-radius: 0;" stylesheets="@../styles/home.css">
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor></ProgressBar>
          </children>
       </AnchorPane>
    </top>
    <left>
       <AnchorPane fx:id="sideMenuPanel" prefHeight="558.0" prefWidth="164.0" styleClass="side-menu-background" stylesheets="@../styles/home.css" BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="homeBtn" onMouseClicked="#onclickHomeBtn" prefHeight="38.0" prefWidth="168.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="🏠     Home" />
-            <Label fx:id="tutorialBtn" layoutY="38.0" onMouseClicked="#onclickTutorialBtn" prefHeight="38.0" prefWidth="167.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="🎬     Tutorials" />
-            <Label fx:id="articleBtn" layoutX="-1.0" layoutY="76.0" onMouseClicked="#onclickArticleBtn" prefHeight="38.0" prefWidth="166.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="📖     Articles" />
-            <Label fx:id="noteBtn" layoutY="114.0" onMouseClicked="#onclickNoteBtn" prefHeight="38.0" prefWidth="165.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="📝     Personal Notes" />
-            <Label fx:id="messageBtn" layoutX="1.0" layoutY="152.0" onMouseClicked="#onclickMessageBtn" prefHeight="38.0" prefWidth="165.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="📩     Messages" />
-            <Label fx:id="helpBtn" layoutX="-1.0" layoutY="327.0" onMouseClicked="#onclickHelpBtn" prefHeight="38.0" prefWidth="165.0" styleClass="menu-item" stylesheets="@../styles/home.css" text=" ❓     Help" />
-            <Label fx:id="accountBtn" layoutX="1.0" layoutY="288.0" onMouseClicked="#onclickAccountBtn" prefHeight="38.0" prefWidth="165.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="👨‍💻    Account" />
-            <Label fx:id="announcementBtn" layoutX="1.0" layoutY="190.0" onMouseClicked="#onclickAnnouncementBtn" prefHeight="38.0" prefWidth="165.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="📣     Announcement" />
-            <Label fx:id="minimizeBtn" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1.0" layoutY="521.0" onMouseClicked="#onclickMinimizeBtn" prefHeight="38.0" prefWidth="165.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="❌" textAlignment="CENTER" AnchorPane.bottomAnchor="0.6000000000000014" />
+            <Label fx:id="homeBtn" layoutY="37.0" onMouseClicked="#onclickHomeBtn" prefHeight="38.0" prefWidth="168.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="🏠     Home" />
+            <Label fx:id="tutorialBtn" layoutY="75.0" onMouseClicked="#onclickTutorialBtn" prefHeight="38.0" prefWidth="167.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="🎬     Courses" />
+            <Label fx:id="articleBtn" layoutX="-1.0" layoutY="113.0" onMouseClicked="#onclickArticleBtn" prefHeight="38.0" prefWidth="166.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="📖     Articles" />
+            <Label fx:id="noteBtn" layoutY="151.0" onMouseClicked="#onclickNoteBtn" prefHeight="38.0" prefWidth="165.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="📝     Personal Notes" />
+            <Label fx:id="messageBtn" layoutX="1.0" layoutY="189.0" onMouseClicked="#onclickMessageBtn" prefHeight="38.0" prefWidth="165.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="📩     Messages" />
+            <Label fx:id="helpBtn" layoutX="-1.0" layoutY="387.0" onMouseClicked="#onclickHelpBtn" prefHeight="38.0" prefWidth="165.0" styleClass="menu-item" stylesheets="@../styles/home.css" text=" ❓     Help" />
+            <Label fx:id="accountBtn" layoutX="1.0" layoutY="348.0" onMouseClicked="#onclickAccountBtn" prefHeight="38.0" prefWidth="165.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="👨‍💻    Account" />
+            <Label fx:id="announcementBtn" layoutX="1.0" layoutY="227.0" onMouseClicked="#onclickAnnouncementBtn" prefHeight="38.0" prefWidth="165.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="📣     Announcement" />
+            <Label fx:id="minimizeBtn" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1.0" layoutY="-2.1316282072803006E-14" onMouseClicked="#onclickMinimizeBtn" prefHeight="38.0" prefWidth="165.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="❌" textAlignment="CENTER" />
+            <Label fx:id="internetBtn" layoutX="1.0" layoutY="265.0" onMouseClicked="#onclickInternetBtn" prefHeight="38.0" prefWidth="165.0" styleClass="menu-item" stylesheets="@../styles/home.css" text="🌐     Internet" />
          </children>
       </AnchorPane>
    </left>
